samples/_failures_safe/1761286833_0ae537_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48046095.c: In function ‘main’:
./samples/SAFE/__tmp_48046095.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
